# Plainion.WhiteRabbit

./: .gitignore  Plainion.WhiteRabbit.sln  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-dotnet/WhiteRabbit.TauriPlugIn/: ActivitiesController.cs  Activity.cs  AppDataRoot.cs  DataStore.cs  FileLogger.cs  HomeController.cs  ILogger.cs  PlugIn.cs  ReportController.cs  WhiteRabbit.TauriPlugIn.csproj
src-legacy/: Controller.cs  Plainion.WhiteRabbit.csproj  ReportBase.cs  app.config
src-legacy/Model/: Database.cs
src-legacy/Properties/: AssemblyInfo.cs  Settings.Designer.cs  Settings.settings
src-legacy/View/: IController.cs  MainUI.cs  SlimForm.cs  ViewFactory.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/Plainion.WhiteRabbit/: ColumnNames.cs  DateTimeExtensions.cs  Plainion.WhiteRabbit.csproj  Program.cs  Utilities.cs
src/Plainion.WhiteRabbit/Controller/: Controller.cs  Recorder.cs
src/Plainion.WhiteRabbit/Model/: ColumnNames.cs  DataRowExtensions.cs  Database.cs  DayEntry.cs
src/Plainion.WhiteRabbit/Presentation/: Channel.cs  Controller.cs  Recorder.cs
src/components/: ActionsMenu.vue  DatePicker.vue  ReportModal.vue  TimeTable.vue  Toolbar.vue
src/composables/: useCompactWindow.ts  useTimer.ts
src/plainion-whiterabbit/: package.json  pnpm-lock.yaml  vite.config.ts
src/plainion-whiterabbit/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/plainion-whiterabbit/src-tauri/src/: lib.rs  main.rs
src/types/: types.ts
(+32 files in other folders)
